syntax = "proto3";

package article.v1;
option go_package = "/article/v1;articleV1";

import "google/protobuf/timestamp.proto";

message Author {
  int64 id = 1;
  string name = 2;
}

message Article {
  int64 id = 1;
  string title = 2;
  string content = 3;
  Author author = 4;
  int32 status = 5;
  google.protobuf.Timestamp ctime = 6;
  google.protobuf.Timestamp utime = 7;
}

service ArticleService {
  rpc Save(SaveRequest) returns (SaveResponse);
  rpc Publish(PublishRequest) returns (PublishResponse);
  rpc WithDraw(WithDrawRequest) returns (WithDrawResponse);
  rpc List(ListRequest) returns (ListResponse);
  rpc GetById(GetByIdRequest) returns (GetByIdResponse);
  rpc GetPublishedById(GetPublishedByIdRequest) returns (GetPublishedByIdResponse);
  rpc ListPub(ListPubRequest) returns (ListPubResponse);
}

message SaveRequest {
  Article article = 1;
}

message SaveResponse {
  int64 id = 1;
}

message PublishRequest {
  Article article = 1;
}

message PublishResponse {
  int64 id = 1;
}

message PublishV1Request {
  Article article = 1;
}

message PublishV1Response {
  int64 id = 1;
}

message WithDrawRequest {
  Article article = 1;
}

message WithDrawResponse {

}

message ListRequest {
  int64 uid = 1;
  int32 offset = 2;
  int32 limit = 3;
}

message ListResponse {
  repeated Article articles = 1;
}

message GetByIdRequest {
  int64 id = 1;
}

message GetByIdResponse {
  Article article = 1;
}

message GetPublishedByIdRequest {
  int64 id = 1;
  int64 uid = 2;
}

message GetPublishedByIdResponse {
  Article article = 1;
}

message ListPubRequest {
  google.protobuf.Timestamp start_time = 1;
  int32 offset = 2;
  int32 limit = 3;
}

message ListPubResponse {
  repeated Article articles = 1;
}